--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,6 +2,14 @@ name: Go
 
 on: [push]
 
+permissions:
+  # Required: allow read access to the content for analysis.
+  contents: read
+  # Optional: allow read access to pull request. Use with `only-new-issues` option.
+  pull-requests: read
+  # Optional: allow write access to checks to allow the action to annotate code in the PR.
+  checks: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +23,15 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           cache: true
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+      - name: goimports-install
+        run: go install golang.org/x/tools/cmd/goimports@latest
       - name: Build
-        run: go build -v ./...
+        run: make build
       - name: Test
-        run: go test -v ./...
+        run: make test
+      - name: Lint
+        run: make lint
+      - name: Fmt
+        run: make fmt
